Membrane Service Proxy Change Log
=============================================================================

* [release] 4.0.17

* [feature] Membrane's URL parsing algorithm can now be exchanged: For
  example by using <router><uriFactory allowIllegalCharacters="true" />...
  you can allow characters like '{' in any Membrane component requiring URI
  parsing (for example to proxy Microsoft SharePoint Server).

* [update] dependency json-schema-validator to 2.1.8. The JSON Schema
  Validaton draft v4 is now used, which might require some schema changes.

* [refactoring] the basic classes used by Membrane now don't depend on Groovy
  anymore. This means you can remove Groovy from the dependency list (or
  classpath) as long as you don't use a feature explicitly requiring it.

* [feature] a <login> interceptor's session can now be accessed by other
  Membrane components using exchange.getProperty("login-session"), if "login"
  is the ID of the <login> interceptor (which is the default).
  In combination with the last feature, this gives access to the user's
  password using
    ((Session)exchange.getProperty("login-session").
        getUserAttributes().get("password") .
  This can, for example used for further backend authentication.

* [feature] You can use <login exposeUserCredentialsToSession="true" ... />
  to add a user's username and password as userAttributes to the session.

* [release] 4.0.16

* [changed behavior] Set <router retryInit="true">, if you want the router
  to start even though some routes may not have been initialized yet (for
  example, because a WSDL could not be downloaded). These rules will be
  inactive (=not used for routing decissions).
  <router retryInitInterval=""> may be set to automatically try regular
  reinitialization. Also the admin trigger this through the <adminConsole>.
  
  This now applies to proxy, serviceProxy and soapProxy, if retryInit="true"
  is set.
  